# hip-rl

./: .gitignore  LICENSE  README.md  hopper.xml  pyproject.toml  requirements.txt
configs/: ant.yaml  cheetah.yaml  config-swimmer.yaml  half_cheetah.yaml  hopper.yaml  inverted_pendulum.yaml  mountain_car.yaml  pendulum.yaml  reacher.yaml  swimmer.yaml
src/: __init__.py  hallucinated_model.py  hallucination_wrapper.py  hip_rl.py  hpbucrl.py  mpc.py  plot.py  policy.py  preference_model.py  reward_model.py  run.py  sac.py  simplify.py  swimmer.py  test.py  test_ppo.py  testing_mujoco.py  train.py  train_ppo.py  transition_model.py  util.py
src/envs/: __init__.py  ant.py  half_cheetah.py  hopper.py  inverted_pendulum.py  mountain_car.py  pendulum.py  reacher.py  swimmer.py
wandb/: latest-run
wandb/run-20230607_094513-kila85vr/: run-kila85vr.wandb
wandb/run-20230607_094709-6sk0cmz4/: run-6sk0cmz4.wandb
wandb/run-20230607_094745-vc6tz012/: run-vc6tz012.wandb
wandb/run-20230607_100532-r357e9uk/: run-r357e9uk.wandb
wandb/run-20230607_100649-wi5kothw/: run-wi5kothw.wandb
wandb/run-20230607_100821-twd7u5sp/: run-twd7u5sp.wandb
wandb/run-20230607_101640-304zq0sk/: run-304zq0sk.wandb
wandb/run-20230607_103103-sqsumzgr/: run-sqsumzgr.wandb
wandb/run-20230607_103916-wp7rc4ey/: run-wp7rc4ey.wandb
wandb/run-20230607_104008-k4s91szu/: run-k4s91szu.wandb
wandb/run-20230607_110355-qaxy0yb6/: run-qaxy0yb6.wandb
wandb/run-20230607_135230-5k3ucq90/: run-5k3ucq90.wandb
wandb/run-20230607_135310-8luhjltv/: run-8luhjltv.wandb
wandb/run-20230607_135633-ye3zud6r/: run-ye3zud6r.wandb
wandb/run-20230607_135710-08mdwrhx/: run-08mdwrhx.wandb
wandb/run-20230607_135815-q9uo9to3/: run-q9uo9to3.wandb
(+111 files in other folders)
