[tool.poetry]
name = "hip-rl"
version = "0.1.0"
description = ""
authors = ["Chen Bo Calvin Zhang <chenbocalvinzhang@gmail.com>"]
readme = "README.md"
packages = [{include = "hip_rl"}]

[tool.poetry.dependencies]
python = "^3.11"
gym = "^0.26.2"
torch = "^2.0.1"
pyyaml = "^6.0"
numpy = "^1.24.3"
blitz-bayesian-pytorch = "^0.2.8"
wandb = "^0.15.4"
moviepy = "^1.0.3"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
