[tool.poetry]
name = "hip-rl"
version = "0.1.0"
description = ""
authors = ["Chen Bo Calvin Zhang <chenbocalvinzhang@gmail.com>"]
readme = "README.md"
packages = [{include = "hip_rl"}]

[tool.poetry.dependencies]
python = "^3.11"
mujoco = "^2.3.5"
torch = "^2.0.1"
opencv-python = "^4.7.0.72"
pyyaml = "^6.0"
gymnasium = "^0.28.1"
wandb = "^0.15.4"
stable-baselines3 = ">=2.0.0a1"
imageio = "^2.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
